# spelling-game

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: HighScoreInput.vue  HighScoresModal.vue  LetterInput.vue
