[tool.poetry]
name = "spelling-game"
version = "0.1.0"
description = "Backend for spelling game web app"
authors = ["Ryan Beaman"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
gtts = "^2.5.4"
python-dotenv = "^1.1.0"
openai = "^1.82.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"